--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   direction: rtl;
   text-align: right;
-  background-color: #282c34;
+  background: rgba(40,44,52,1);
   min-height: 100vh;
 }
 
@@ -11,3 +11,32 @@
 .material-icons.md-30 { font-size: 30px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
+
+.sane-glz-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 162px;
+  overflow: hidden;
+  background: rgb(71,87,117);
+}
+
+.sane-glz-content {
+  background: rgb(71,87,117);
+  background: linear-gradient(180deg, rgba(71,87,117,1) 0%, rgba(40,44,52,1) 80%, rgba(40,44,52,1) 100%);
+  padding-top: 8px;
+  position: absolute;
+  top: 162px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+
+}
+
+.sane-glz-content::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
+}
